[patch."https://github.com/Starry-OS/axhal.git".axhal]
path = "crates/axhal"

[patch."https://github.com/Starry-OS/axprocess.git".axprocess]
path = "crates/axprocess"

[patch."https://github.com/Starry-OS/axruntime.git".axruntime]
path = "crates/axruntime"

[patch."https://github.com/Starry-OS/axtask.git".axtask]
path = "crates/axtask"

[patch."https://github.com/Starry-OS/axtrap.git".axtrap]
path = "crates/axtrap"

[patch."https://github.com/Starry-OS/taskctx.git".taskctx]
path = "crates/taskctx"

[profile.dev]
lto = true

[profile.release]
lto = true

[workspace]
members = ["apps/display", "apps/exception", "apps/helloworld", "apps/memtest", "apps/fs/shell", "apps/net/echoserver", "apps/net/httpclient", "apps/net/httpserver", "apps/net/udpserver", "apps/net/bwbench", "apps/task/parallel", "apps/task/sleep", "apps/task/yield", "apps/task/priority", "apps/task/tls", "apps/monolithic_userboot", "tools/axlibc"]
resolver = "2"
